[tool.poetry]
name = "chutils"
version = "2.4.0"
description = "Набор простых и удобных утилит для Python, который избавляет от рутины при работе с конфигурацией и логированием в новых проектах."
authors = ["Chu4hel <sergeiivanov636@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "chutils", from = "src" }]
exclude = [
    "tests/",
    "site/",
    "examples/",
    "docs/",
    ".github/",
    ".idea/",
    "__pycache__/",
    "*.pyc",
    "*.log",
    "*.egg-info/",
    ".vscode/",
    ".ruff_cache/",
    "coverage.xml",
    ".coverage",
    "PUBLISHING.md",
    "project.txt",
    "changelog.txt",
]

[tool.poetry.dependencies]
python = ">=3.9, !=3.9.0, !=3.9.1"
keyring = "^25.7.0"
pyyaml = "^6.0.3"
python-dotenv = [
    { version = "1.2.1", python = "<3.10" },
    { version = "^1.2.2", python = ">=3.10" }
]


[tool.poetry.group.dev.dependencies]
pytest = [
    { version = "^8.4.2", python = "<3.10" },
    { version = "^9.0.2", python = ">=3.10" }
]
pytest-mock = "^3.15.1"
pyfakefs = [
    { version = "^5.10.0", python = "<3.10" },
    { version = "^6.1.5", python = ">=3.10" }
]
mkdocs = "^1.6.1"

mkdocs-material = "^9.7.5"
mkdocstrings = { extras = ["python"], version = "^0.30.1" }
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]