[project]
name = "chutils"
version = "2.6.1"
description = "Набор простых и удобных утилит для Python, который избавляет от рутины при работе с конфигурацией и логированием в новых проектах."
authors = [{name = "Chu4hel", email = "sergeiivanov636@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9, !=3.9.0, !=3.9.1"
dependencies = [
    "keyring (>=25.7.0)",
    "pyyaml (>=6.0.3)",
    "python-dotenv (>=1.2.1) ; python_full_version < '3.10'",
    "python-dotenv (>=1.2.2) ; python_full_version >= '3.10'"
]

[project.optional-dependencies]
pydantic = ["pydantic (>=2.13.4,<3.0.0)"]
json = ["python-json-logger (>=3.2.1)"]
watch = ["watchdog (>=6.0.0)"]
rich = ["rich (>=15.0.0)"]
date = ["python-dateutil (>=2.9.0)"]
full = [
    "pydantic (>=2.13.4)",
    "python-json-logger (>=3.2.1)",
    "watchdog (>=6.0.0)",
    "rich (>=15.0.0)",
    "python-dateutil (>=2.9.0)"
]

[project.scripts]
chutils = "chutils.cli:main"

[tool.poetry]
packages = [{ include = "chutils", from = "src" }]
exclude = [
    "tests/",
    "site/",
    "examples/",
    "docs/",
    ".github/",
    ".idea/",
    "__pycache__/",
    "*.pyc",
    "*.log",
    "*.egg-info/",
    ".vscode/",
    ".ruff_cache/",
    "coverage.xml",
    ".coverage",
    "PUBLISHING.md",
    "project.txt",
    "changelog.txt",
]

[tool.poetry.group.dev.dependencies]
pytest = { version = "^9.0.3", python = ">=3.10" }
pytest-mock = "^3.15.1"
pyfakefs = { version = "^6.2.0", python = ">=3.10" }
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.5"
mkdocstrings = { version = "^1.0.4", python = ">=3.10" }
mkdocstrings-python = { version = "^2.0.3", python = ">=3.10" }
pytest-cov = "^7.1.0"
pytest-asyncio = { version = "^1.3.0", python = ">=3.10" }
ruff = "^0.15.12"
rich = "^15.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]